<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.myproject</groupId>
  <artifactId>SpringBoot</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>springboot</name>
  <description>testspringboot</description>
  <parent>
	<groupId>org.springframework.boot</groupId>
	<artifactId>spring-boot-starter-parent</artifactId>
	<version>3.4.0</version>
	<relativePath/> <!-- lookup parent from repository -->
  </parent>
  	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>21</java.version>
		<lucene.version>9.10.0</lucene.version>
	</properties>


	<repositories>
		<repository>
			<id>dynomakeRepository</id>
			<url>https://maven.dynomake.space/releases</url>
		</repository>
	</repositories>


	<dependencies>
	  <dependency>
		  <groupId>org.apache.lucene</groupId>
		  <artifactId>lucene-core</artifactId>
		  <version>${lucene.version}</version>
	  </dependency>
	  <dependency>
		  <groupId>org.apache.lucene</groupId>
		  <artifactId>lucene-analysis-common</artifactId>
		  <version>${lucene.version}</version>
	  </dependency>
	  <dependency>
		  <groupId>org.apache.lucene</groupId>
		  <artifactId>lucene-queryparser</artifactId>
		  <version>${lucene.version}</version>
	  </dependency>
	  <dependency>
		  <groupId>org.apache.lucene</groupId>
		  <artifactId>lucene-highlighter</artifactId>
		  <version>${lucene.version}</version>
	  </dependency>
	  <dependency>
		  <groupId>org.seleniumhq.selenium</groupId>
		  <artifactId>selenium-java</artifactId>
		  <version>4.27.0</version>
	  </dependency>
<!--	  <dependency>-->
<!--		  <groupId>jakarta.servlet</groupId>-->
<!--		  <artifactId>jakarta.servlet-api</artifactId>-->
<!--	  </dependency>-->
		<dependency>
			<groupId>com.github.mwiede</groupId>
			<artifactId>jsch</artifactId>
			<version>0.2.21</version>
		</dependency>
	<dependency>
	  <groupId>org.springframework.boot</groupId>
	  <artifactId>spring-boot-devtools</artifactId>
	</dependency>
<!--	  <dependency>-->
<!--		  <groupId>org.projectlombok</groupId>-->
<!--		  <artifactId>lombok</artifactId>-->
<!--		  <version>1.18.32</version>-->
<!--		  <scope>provided</scope>-->
<!--	  </dependency>-->
<!--  	<dependency>-->
<!--			<groupId>org.springframework.boot</groupId>-->
<!--			<artifactId>spring-boot-starter-jdbc</artifactId>-->
<!--	</dependency>-->
<!--    	<dependency>-->
<!--		<groupId>org.mybatis.spring.boot</groupId>-->
<!--		<artifactId>mybatis-spring-boot-starter</artifactId>-->
<!--		<version>3.0.3</version>-->
<!--	</dependency>-->
	<dependency>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-test</artifactId>
		<scope>test</scope>
	</dependency>
	  <dependency>
		  <groupId>io.jsonwebtoken</groupId>
		  <artifactId>jjwt</artifactId>
		  <version>0.12.6</version>
	  </dependency>
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.47.1.0</version> <!-- 请使用最新的版本 -->
		</dependency>
<!--	  <dependency>-->
<!--		  <groupId>com.alibaba</groupId>-->
<!--		  <artifactId>druid</artifactId>-->
<!--		  <version>1.2.20</version>-->
<!--	  </dependency>-->
<!--	<dependency>-->
<!--    	<groupId>org.springframework.boot</groupId>-->
<!--    	<artifactId>spring-boot-starter-log4j2</artifactId>-->
<!--	</dependency>-->
	<dependency>
		<groupId>com.fasterxml.jackson.dataformat</groupId>
		<artifactId>jackson-dataformat-yaml</artifactId>
		<version>2.18.2</version>
	</dependency>
      <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
          <scope>test</scope>
      </dependency>

<!--	  <dependency>-->
<!--		  <groupId>mysql</groupId>-->
<!--		  <artifactId>mysql-connector-java</artifactId>-->
<!--		  <scope>runtime</scope>-->
<!--		  <version>8.0.33</version>-->
<!--	  </dependency>-->
	  <dependency>
		  <groupId>io.netty</groupId>
		  <artifactId>netty-all</artifactId>
		  <version>4.2.0.RC1</version>
	  </dependency>

	  <dependency>
		  <groupId>org.elasticsearch</groupId>
		  <artifactId>elasticsearch</artifactId>
		  <version>8.17.0</version>
	  </dependency>

	  <!--swagger        -->
	  <dependency>
		  <groupId>io.springfox</groupId>
		  <artifactId>springfox-swagger2</artifactId>
		  <version>3.0.0</version>
	  </dependency>

	  <dependency>
		  <groupId>io.springfox</groupId>
		  <artifactId>springfox-boot-starter</artifactId>
		  <version>3.0.0</version>
	  </dependency>
	  <!--swagger-ui.html模式        -->
	  <dependency>
		  <groupId>io.springfox</groupId>
		  <artifactId>springfox-swagger-ui</artifactId>
		  <version>3.0.0</version>
	  </dependency>
<!--			<dependency>-->
<!--				<groupId>org.springframework.boot</groupId>-->
<!--				<artifactId>spring-boot-starter-data-redis</artifactId>-->
<!--			</dependency>-->
	  <dependency>
		  <groupId>org.apache.pdfbox</groupId>
		  <artifactId>pdfbox</artifactId>
		  <version>3.0.3</version>
	  </dependency>

<!--	  <dependency>-->
<!--		  <groupId>org.springframework.boot</groupId>-->
<!--		  <artifactId>spring-boot-starter-data-jpa</artifactId>-->
<!--	  </dependency>-->
<!--			&lt;!&ndash; Spring Boot Starter AMQP &ndash;&gt;-->
<!--			<dependency>-->
<!--				<groupId>org.springframework.boot</groupId>-->
<!--				<artifactId>spring-boot-starter-amqp</artifactId>-->
<!--			</dependency>-->

<!--		<dependency>-->
<!--			<groupId>org.springframework.amqp</groupId>-->
<!--			<artifactId>spring-rabbit</artifactId>-->
<!--			<version>3.2.1</version>-->
<!--		</dependency>-->
		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis-reactive -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-redis-reactive</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-quartz</artifactId>
		</dependency>
	  <dependency>
		  <groupId>org.springframework.boot</groupId>
		  <artifactId>spring-boot-starter-webflux</artifactId>
	  </dependency>
	  <dependency>
		  <groupId>org.springframework.boot</groupId>
		  <artifactId>spring-boot-starter-data-r2dbc</artifactId>
	  </dependency>
	  <dependency>
		  <groupId>io.r2dbc</groupId>
		  <artifactId>r2dbc-h2</artifactId>
		  <scope>runtime</scope>
	  </dependency>
	  <dependency>
		  <groupId>space.dynomake</groupId>
		  <artifactId>libretranslate-java</artifactId>
		  <version>1.0.9</version>
	  </dependency>
		<dependency>
			<groupId>io.projectreactor</groupId>
			<artifactId>reactor-test</artifactId>
			<version>3.7.1</version>
			<scope>test</scope>
		</dependency>
	  <dependency>
		  <groupId>org.bytedeco</groupId>
		  <artifactId>javacv</artifactId>
		  <version>1.5.11</version>
	  </dependency>
	  <dependency>
		  <groupId>org.bytedeco</groupId>
		  <artifactId>ffmpeg</artifactId>
		  <version>7.1-1.5.11</version>
	  </dependency>

	  <!-- PostgreSQL 驱动 -->
<!--	  <dependency>-->
<!--		  <groupId>org.postgresql</groupId>-->
<!--		  <artifactId>postgresql</artifactId>-->
<!--		  <scope>runtime</scope>-->
<!--		  <version>42.7.4</version>-->
<!--	  </dependency>-->

	  <!-- SQLite 驱动 -->
<!--	  <dependency>-->
<!--		  <groupId>org.xerial</groupId>-->
<!--		  <artifactId>sqlite-jdbc</artifactId>-->
<!--		  <scope>runtime</scope>-->
<!--		  <version>3.47.1.0</version>-->
<!--	  </dependency>-->

		<dependency>
			<groupId>com.positiondev.epublib</groupId>
			<artifactId>epublib-core</artifactId>
			<version>3.1</version>
		</dependency>

		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.18.3</version>
		</dependency>


	  <!--	  <dependency>-->
<!--		  <groupId>org.apache.shardingsphere</groupId>-->
<!--		  <artifactId>shardingsphere-jdbc-core-spring-boot-starter</artifactId>-->
<!--		  <version>5.1.2</version>-->
<!--	  </dependency>-->
  </dependencies>
  	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<includes>
                    <include>**/*.yaml</include> <!-- 只过滤 .yaml 文件 -->
                </includes>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>3.2.5</version>
			</plugin>

<!--			<plugin>-->
<!--				<groupId>org.mybatis.generator</groupId>-->
<!--				<artifactId>mybatis-generator-maven-plugin</artifactId>-->
<!--				<version>1.4.1</version>-->
<!--				<configuration>-->
<!--					<configurationFile>${basedir}/src/main/resources/mbg/generatorConfig.xml</configurationFile>-->
<!--					<overwrite>true</overwrite>-->
<!--					<verbose>true</verbose>-->
<!--				</configuration>-->
<!--				&lt;!&ndash; 配置数据库链接及mybatis generator core依赖 生成mapper时使用 &ndash;&gt;-->
<!--				<dependencies>-->
<!--&lt;!&ndash;					<dependency>&ndash;&gt;-->
<!--&lt;!&ndash;						<groupId>mysql</groupId>&ndash;&gt;-->
<!--&lt;!&ndash;						<artifactId>mysql-connector-java</artifactId>&ndash;&gt;-->
<!--&lt;!&ndash;					</dependency>&ndash;&gt;-->
<!--&lt;!&ndash;					<dependency>&ndash;&gt;-->
<!--&lt;!&ndash;						<groupId>org.mybatis.generator</groupId>&ndash;&gt;-->
<!--&lt;!&ndash;						<artifactId>mybatis-generator-core</artifactId>&ndash;&gt;-->
<!--&lt;!&ndash;						<version>1.4.1</version>&ndash;&gt;-->
<!--&lt;!&ndash;					</dependency>&ndash;&gt;-->
<!--				</dependencies>-->
<!--			</plugin>-->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.16.2</version>
			</plugin>
		</plugins>
	</build>
</project>